test/cases/parser/BadGhost.errors
src/BadGhost.b:5:11: Syntax error ('ghost' cannot be used with 'type' or 'datatype')
